<resources>
    <string name="app_name">Llibres</string>
    <string name="mail">Enter your mail...</string>
    <string name="pass">Enter a password...</string>
    <string name="repeat">Repeat the password...</string>
    <string name="name">Enter your name</string>
    <string name="nickname">Introduce the name that will be shown to the other users</string>
    <string name="registra">End</string>
    <string name="continua">continue</string>
    <string name="title_activity_opening">opening</string>
    <string name="login">Login</string>
    <string name="register">New user</string>
    <string name="error">Passwords do not match</string>
    <string name="internet">Error uploading the image</string>
        <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
</resources>
