<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.que.llibres.login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="296dp"
        android:alpha="0.2"
        android:background="white"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="220dp"
        android:alpha="0.2"
        android:background="white"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="372dp"
        android:alpha="0.2"
        android:background="white"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
