<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="328dp"
        android:layout_marginRight="96dp"
        android:alpha="0.5"
        android:background="@drawable/no_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="248dp"
        android:alpha="0.3"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="192dp"
        android:alpha="0.3"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/nickname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="148dp"
        android:background="@drawable/rodonet"
        android:text="@string/registra"
        android:textColor="#80CBC4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>